Tested the async zip upload and fixed issues.